code cleanup, typos and readme additions